# vaulty

./: .gitignore  .travis.yml  README.md  azure-pipelines.yml  provision.yml
massu-mail/: README.md
massu-mail/massu-filter/: Cargo.toml  README.md
massu-mail/massu-filter/src/: main.rs
massu-mail/massu-mgr/: Cargo.toml
massu-mail/massu-mgr/src/: controllers.rs  email.rs  mail.rs  mailgun.rs  main.rs  router.rs
massu-mail/massu-svr/: Cargo.toml
massu-mail/setup/: provision.sh
massu-mail/setup/postfix/: main.cf  master.cf  vmail
massu-mail/test/: Vagrantfile
notes/: postfix.md
provision/: .gitignore  README.md  provision.yml
provision/inventory/: sample.yml
provision/roles/common/files/: jail.local  sshd_config
provision/roles/common/tasks/: main.yml
provision/roles/dbservers/files/: postgresql.conf
provision/roles/dbservers/tasks/: main.yml
provision/roles/dbservers/templates/: pg_hba.conf.j2
provision/roles/mailservers/files/: vaulty.service
provision/roles/mailservers/files/postfix/: master.cf  virtual
provision/roles/mailservers/files/sasl/: saslauthd  smtpd.conf
provision/roles/mailservers/tasks/: main.yml
provision/roles/mailservers/templates/: vaulty.toml.j2
provision/roles/mailservers/templates/postfix/: main.cf.j2  pgsql-valiases.cf.j2  pgsql-vmail.cf.j2
provision/roles/webservers/tasks/: main.yml
provision/roles/webservers/templates/: certbot.ini  gunicorn.service.j2  vaulty_web.env.j2
provision/roles/webservers/templates/nginx/: vaulty.j2
vaulty-db/: schema.sql
vaulty-mail/: Cargo.toml  README.md
vaulty-mail/filter/: Cargo.toml  README.md
vaulty-mail/filter/src/: email.rs  error.rs  main.rs  reply.rs
vaulty-mail/lib/: Cargo.toml
vaulty-mail/lib/src/: api.rs  config.rs  constants.rs  email.rs  error.rs  errors.rs  lib.rs
vaulty-mail/lib/src/db/: db.rs
vaulty-mail/lib/src/dropbox/: api.rs  client.rs  mod.rs
vaulty-mail/lib/src/mailgun/: types.rs
vaulty-mail/lib/src/storage/: backends.rs  client.rs  error.rs  errors.rs  mod.rs
vaulty-mail/lib/src/storage/dropbox/: api.rs  client.rs  mod.rs
vaulty-mail/lib/test/: sample_email_1.txt
vaulty-mail/server/: .gitignore  Cargo.toml  README.md
vaulty-mail/server/resources/: vaulty.conf
vaulty-mail/server/src/: cache.rs  config.rs  controllers.rs  error.rs  errors.rs  filter.rs  filters.rs  http.rs  main.rs  router.rs  routes.rs
vaulty-mail/server/test/: attachment.json  basic.sh  email.json
vaulty-mail/setup/postfix/: main.cf  master.cf  virtual  vmail
vaulty-mail/test/: Vagrantfile
vaulty-mail/vaulty-filter/src/: main.rs
vaulty-mail/vaulty-lib/: Cargo.toml
vaulty-mail/vaulty-lib/src/: dropbox.rs  email.rs  lib.rs
vaulty-mail/vaulty-lib/src/dropbox/: api.rs  mod.rs
vaulty-mail/vaulty-mgr/: Cargo.toml
vaulty-mail/vaulty-mgr/src/: controllers.rs  mailgun.rs  main.rs
vaulty-web/: .gitignore  NOTES.md  README.md  requirements.txt
vaulty-web/vaulty/: manage.py
vaulty-web/vaulty/vaulty/: asgi.py  settings.py  urls.py  wsgi.py
vaulty-web/vaulty/web/: admin.py  email.py  forms.py  models.py  urls.py  views.py
vaulty-web/vaulty/web/migrations/: 0001_initial.py  0002_auto_20200525_2154.py  0002_create_superuser.py  0003_launchmailinglist.py
vaulty-web/vaulty/web/templates/web/: base.html  faq.html  index.html  launch_confirm.html  pricing.html
