[package]
name = "vaulty_filter"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
vaulty = { path = "../lib" }
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.9"
mailparse = "0.10.2"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
