[package]
name = "vaulty_filter"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
vaulty = { path = "../lib" }
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.9"
reqwest = { version = "0.10.1" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rmp-serde = "0.14.2"
tokio = { version = "^0.2.11", features = ["full"] }
futures = "0.3"
lazy_static = "1.4.0"
