[package]
name = "vaulty"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
log = "0.4.8"
chrono = "0.4.10"
bytes = "0.5.3"
mailparse = "0.10.2"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono", "uuid" ] }

[dev-dependencies]
tokio = { version = "0.2.6", features = ["full"] }
