[package]
name = "vaulty_server"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
vaulty = { path = "../lib" }
warp = "0.2.0"
tokio = { version = "0.2.6", features = ["full"] }
env_logger = "0.7.1"
log = "0.4.8"
bytes = "0.5.3"
clap = "2.33.0"
mailparse = "0.10.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chashmap = "2.2.2"
lazy_static = "1.4.0"
rmp-serde = "0.14.2"
base64 = "0.11.0"
