[package]
name = "vaulty_lib"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.0"
log = "0.4.8"
chrono = "0.4.10"
