[package]
name = "vaulty_mgr"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[dependencies]
rouille = "3.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.0"
reqwest = { version = "0.10.0", features = ["blocking"] }
env_logger = "0.7.1"
log = "0.4.8"
# tokio = { version = "0.2.6", features = ["full"] }
